<?xml version="1.0"?>
<package format="2">
  <name>beginner_tutorials</name>
  <version>1.0.0</version>
  <description>The beginner_tutorials package</description>
  <maintainer email="tp6u4jo6@gmail.com">Wenjiu</maintainer>
  <license>CC BY-NC-SA 4.0</license>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
